# boo

./: .gitignore  .gitmodules  CGLXContext.cpp  CGLXContext.hpp  CMakeLists.txt  FindIPP.cmake  IContext.cpp  IContext.hpp  IPP-LICENSE  InputDeviceClasses.cpp  LICENSE  README.md  libBoo.hpp  libBoo.pri  libBoo.pro  main.cpp
WinUSBInstaller/: WinUSBInstaller.manifest  WinUSBInstaller.pro  main.c
include/: CCGLContext.hpp  CGLXContext.hpp  CInputDeferredRelay.hpp  CInputRelay.hpp  CQtOpenGLWindow.hpp  CSurface.hpp  IApplication.hpp  IContext.hpp  IGraphicsContext.hpp  IInputWaiter.hpp  IRetraceWaiter.hpp  ISurface.hpp  InputDeferredRelay.hpp  InputRelay.hpp  Surface.hpp  boo.hpp
include/boo/: BooObject.hpp  DeferredWindowEvents.hpp  IApplication.hpp  IGraphicsContext.hpp  IWindow.hpp  System.hpp  ThreadLocalPtr.hpp  UWPViewProvider.hpp  boo.hpp
include/boo/_graphicsdev/: GL.hpp  GLSLMacros.hpp  VulkanDispatchTable.hpp
include/boo/audiodev/: AudioMatrix.hpp  IAudioSubmix.hpp  IAudioVoice.hpp  IAudioVoiceAllocator.hpp  IAudioVoiceEngine.hpp  IMIDIPort.hpp  IMIDIReader.hpp  MIDIDecoder.hpp  MIDIEncoder.hpp
include/boo/graphicsdev/: D3D.hpp  D3D11.hpp  D3D12.hpp  GL.hpp  GLES3.hpp  GLSLMacros.hpp  IGraphicsCommandQueue.hpp  IGraphicsDataFactory.hpp  Metal.hpp  NX.hpp  Vulkan.hpp  VulkanDispatchTable.hpp  glew.h  glxew.h  nx_compiler.hpp  wglew.h
include/boo/inputdev/: CafeProPad.hpp  DeviceBase.hpp  DeviceFinder.hpp  DeviceSignature.hpp  DeviceToken.hpp  DolphinSmashAdapter.hpp  DualshockPad.hpp  GenericPad.hpp  HIDParser.hpp  IHIDListener.hpp  NintendoPowerA.hpp  RevolutionPad.hpp  XInputPad.hpp
include/graphicsys/: CGFXVertexLayoutBase.hpp  IGFXCommandBuffer.hpp  IGFXContext.hpp  IGFXPipelineState.hpp  IGFXTransformSet.hpp
include/graphicsys/hecl/: CHECLLexer.hpp  HECLExpressions.hpp  IHECLBackend.hpp
include/inputdev/: CCafeProPad.hpp  CDeviceBase.hpp  CDeviceFinder.hpp  CDeviceToken.hpp  CDolphinSmashAdapter.hpp  CDualshockPad.hpp  CGenericPad.hpp  CRevolutionPad.hpp  DeviceBase.hpp  DeviceClasses.hpp  DeviceFinder.hpp  DeviceSignature.hpp  DeviceToken.hpp  DolphinSmashAdapter.hpp  GenericPad.hpp  IHIDListener.hpp  SDeviceSignature.hpp
include/mac/: CCGLContext.hpp  CGLContext.hpp
include/win/: CWGLContext.hpp
include/windowsys/: IGraphicsContext.hpp  IWindow.hpp
include/x11/: CGLXContext.hpp  GLXContext.hpp
lib/: CFPointer.hpp  Common.hpp  InputDeferredRelay.cpp  InputRelay.cpp  RetraceWaiter.cpp  Surface.cpp
lib/audiodev/: ALSA.cpp  AQS.cpp  AudioMatrix.cpp  AudioMatrix.hpp  AudioMatrixSSE.cpp  AudioSubmix.cpp  AudioSubmix.hpp  AudioVoice.cpp  AudioVoice.hpp  AudioVoiceEngine.cpp  AudioVoiceEngine.hpp  Common.hpp  IAudioHost.hpp  IAudioMix.hpp  LinuxMidi.hpp  LtRtProcessing.cpp  LtRtProcessing.hpp  MIDICommon.cpp  MIDICommon.hpp  MIDIDecoder.cpp  MIDIEncoder.cpp  PulseAudio.cpp  SDL2.cpp  WASAPI.cpp  WAVOut.cpp  XAudio2.cpp  sse2neon.h
lib/graphicsdev/: Common.cpp  Common.hpp  D3D11.cpp  D3D12.cpp  GL.cpp  GLES3.cpp  GLX.cpp  Metal.mm  Vulkan.cpp  VulkanDispatchTable.cpp  d3dx12.h  glew.c
lib/graphicsdev/nx/: CMakeLists.txt  NX.cpp  nx_compiler.cpp  nx_compiler_driver.cpp  switch_cross_file.txt.in
lib/graphicsdev/nx/fake_libdrm_nouveau/: CMakeLists.txt  bomap.c  bufctx.c  libdrm_atomics.h  nouveau.c  private.h  pushbuf.c
lib/inputdev/: CFPointer.hpp  CafeProPad.cpp  DeviceBase.cpp  DeviceFinder.cpp  DeviceSignature.cpp  DolphinSmashAdapter.cpp  DualshockPad.cpp  GenericPad.cpp  HIDDeviceBSD.cpp  HIDDeviceIOKit.cpp  HIDDeviceNX.cpp  HIDDeviceUWP.cpp  HIDDeviceUdev.cpp  HIDDeviceWinUSB.cpp  HIDListenerBSD.cpp  HIDListenerIOKit.cpp  HIDListenerNX.cpp  HIDListenerUWP.cpp  HIDListenerUdev.cpp  HIDListenerWinUSB.cpp  HIDParser.cpp  IHIDDevice.hpp  IOKitPointer.hpp  NintendoPowerA.cpp  RevolutionPad.cpp
lib/mac/: ApplicationCocoa.mm  CocoaCommon.hpp  WindowCocoa.mm
lib/nx/: ApplicationNX.cpp  WindowNX.cpp
lib/win/: ApplicationUWP.cpp  ApplicationWin32.cpp  UWPCommon.hpp  Win32Common.hpp  WinCommon.hpp  WindowUWP.cpp  WindowWin32.cpp
lib/x11/: ApplicationUnix.cpp  ApplicationWayland.hpp  ApplicationXCB.hpp  ApplicationXlib.hpp  GLXContext.cpp  GraphicsContextWayland.cpp  GraphicsContextXCB.cpp  WindowWayland.cpp  WindowXCB.cpp  WindowXlib.cpp  XlibCommon.hpp
soxr/: CMakeLists.txt
soxr/cmake/Modules/: TestBigEndian.cmake
soxr/examples/: CMakeLists.txt
soxr/src/: CMakeLists.txt  avfft32.c  avfft32s.c  cb_t.h  cr-core.c  cr.c  cr.h  fft4g32.c  fft4g32s.c  fft4g64.c  filter.h  internal.h  pffft.c  pffft32.c  pffft32s.c  pffft64s.c  rdft.h  rdft_t.h  soxr.c  vr32.c  vr32s.c
soxr/tests/: CMakeLists.txt
src/: CApplicationCocoa.mm  CApplicationUnix.cpp  CApplicationWayland.hpp  CApplicationWin32.cpp  CApplicationXCB.hpp  CCGLContext.cpp  CGLXContext.cpp  CInputDeferredRelay.cpp  CInputRelay.cpp  CQtOpenGLWindow.cpp  CSurface.cpp
src/graphicsys/: CGraphicsContextWayland.cpp  CGraphicsContextXCB.cpp
src/graphicsys/hecl/: CHECLBackendGLSL.cpp  CHECLBackendHLSL.cpp  CHECLBackendMetal.cpp  CHECLBackendOutline.cpp  CHECLBackendTEV.cpp  CHECLLexer.cpp
src/inputdev/: CCafeProPad.cpp  CDeviceBase.cpp  CDeviceFinder.cpp  CDolphinSmashAdapter.cpp  CDualshockPad.cpp  CGenericPad.cpp  CHIDDeviceIOKit.cpp  CHIDDeviceIOKit.mm  CHIDDeviceUdev.cpp  CHIDDeviceWin32.cpp  CHIDDeviceWinUSB.cpp  CHIDListenerIOKit.cpp  CHIDListenerIOKit.mm  CHIDListenerUdev.cpp  CHIDListenerWin32.cpp  CHIDListenerWinUSB.cpp  CRevolutionPad.cpp  DeviceClasses.cpp  IHIDDevice.hpp  IHIDListener.hpp  SDeviceSignature.cpp
src/mac/: CCGLContext.cpp
src/win/: CWGLContext.cpp
src/windowsys/: CGraphicsContextCocoa.mm  CGraphicsContextWayland.cpp  CGraphicsContextWin32.cpp  CGraphicsContextXCB.cpp  CWindowCocoa.mm  CWindowWayland.cpp  CWindowXCB.cpp
src/x11/: CGLXContext.cpp
test/: CMakeLists.txt  Win32Elevatedlauncher.c  main.cpp  test.pri
xxhash/: xxhash.c
